# matrix-creator-init

./: .drone.yml  CMakeLists.txt  README.md  admobilize_edit_setting.py  admobilize_remove_console.py  asound.conf  boot_modifications.txt  creator-init.bash  creator-mics.conf  em358-program.bash  firmware_info  fpga-program.bash  install.bash  lirc_hardware.conf  matrix-creator-firmware.service  matrix-creator-reset-jtag  matrix-init.bash  matrix-mics.conf  matrix_devices.conf  matrix_voice.config  matrixio-creator-firmware.service  matrixio-devices-firmware.service  matrixlabs_edit_settings.py  mcu_firmware.version  radio-init.bash  sam3-program.bash  uninstall.bash  voice.version  voice_esp32_enable  voice_esp32_reset  voice_esptool
.drone/: slack.tpl
blob/: ZigBeeGateway  ncp_xon_xoff.hex  system.bit  system_creator.bit  system_voice.bit
cfg/: em358.cfg  em358_check.cfg  erase.cfg  sam3s_pi1.cfg  sam3s_pi1_pi2.cfg  sam3s_pi2_pi3.cfg  sam3s_rpi_sysfs.cfg  sam3s_rpi_sysfs_check.cfg
cpp/: CMakeLists.txt  firmware_info.cpp  fpga_info.cpp
debian/: changelog  control  copyright  files  matrix-creator-init.install  matrix-creator-initialization.install  matrixio-creator-init.install  postinst  prerm
